<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="top">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Movie_name"
        android:text="@string/Movie_name"
        android:textColorHint="@color/red"/>

    <Spinner android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <EditText android:text="@string/year"
            android:hint="@string/Year"
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number">
        </EditText>

        <EditText android:layout_height="wrap_content"
            android:text="@string/Duration"
            android:hint="@string/Duration"
            android:layout_weight="1" android:layout_width="wrap_content"
            android:id="@+id/editText4">
        </EditText>
    </LinearLayout>
    <RatingBar android:id="@+id/ratingBar1"
        android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
    </RatingBar>
    <EditText android:layout_height="0dip"
        android:layout_width="match_parent"
        android:id="@+id/editText1"
        android:text="@string/Write_Review"
        android:hint="@string/Write_Review"
        android:layout_weight="1"
        android:gravity="top">
    </EditText>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/editText5"
        android:text="@string/Starcast"
        android:hint="@string/Starring">
    </EditText>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/editText6"
        android:text="@string/Director"
        android:hint="@string/Director">
    </EditText>
    <Button android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/button1"
        android:layout_width="match_parent">
    </Button>

</LinearLayout>